--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ file.reference.com.lowagie.text-2.1.7.jar=D:\\_Dynag\\21-Prog\\Java Final\\Libs\
 file.reference.com.lowagie.text-2.1.7.jar-1=D:\\_Clood-Hemge\\21-Prog\\Java Final\\Libs\\com.lowagie.text-2.1.7.jar
 file.reference.com.lowagie.text-2.1.7.jar-2=dist\\lib\\com.lowagie.text-2.1.7.jar
 file.reference.com.lowagie.text-2.1.7.jar-3=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\com.lowagie.text-2.1.7.jar
+file.reference.com.mysql.jdbc_5.1.5.jar=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\com.mysql.jdbc_5.1.5.jar
 file.reference.commons-net-3.6-sources.jar=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\commons-net-3.6-sources.jar
 file.reference.commons-net-3.6.jar=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\commons-net-3.6.jar
 file.reference.hamcrest-core-1.3.jar=D:\\_Dynag\\21-Prog\\Java Final\\Libs\\freeChart\\hamcrest-core-1.3.jar
@@ -117,7 +118,8 @@ javac.classpath=\
     ${file.reference.rs2xml.jar-3}:\
     ${file.reference.jcommon-1.0.23.jar-3}:\
     ${file.reference.jfreechart-1.0.19.jar-3}:\
-    ${file.reference.sqlite-jdbc-3.27.2.1.jar-3}
+    ${file.reference.sqlite-jdbc-3.27.2.1.jar-3}:\
+    ${file.reference.com.mysql.jdbc_5.1.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
