--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=PingOuin
+application.vendor=mgand
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,96 +33,47 @@ dist.jar=${dist.dir}/PingOuin.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PingOuin
+endorsed.classpath=
 excludes=
-file.reference.activation-1.1.jar=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\activation-1.1.jar
-file.reference.com.lowagie.text-2.1.7.jar=D:\\_Dynag\\21-Prog\\Java Final\\Libs\\com.lowagie.text-2.1.7.jar
+file.reference.activation-1.1.jar=D:\\Prog\\Java Final\\Libs\\activation-1.1.jar
 file.reference.com.lowagie.text-2.1.7.jar-1=D:\\_Clood-Hemge\\21-Prog\\Java Final\\Libs\\com.lowagie.text-2.1.7.jar
-file.reference.com.lowagie.text-2.1.7.jar-2=dist\\lib\\com.lowagie.text-2.1.7.jar
+file.reference.com.lowagie.text-2.1.7.jar-2=D:\\Prog\\Java Final\\Libs\\com.lowagie.text-2.1.7.jar
 file.reference.com.lowagie.text-2.1.7.jar-3=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\com.lowagie.text-2.1.7.jar
-file.reference.com.mysql.jdbc_5.1.5.jar=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\com.mysql.jdbc_5.1.5.jar
-file.reference.commons-net-3.6-sources.jar=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\commons-net-3.6-sources.jar
-file.reference.commons-net-3.6.jar=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\commons-net-3.6.jar
-file.reference.hamcrest-core-1.3.jar=D:\\_Dynag\\21-Prog\\Java Final\\Libs\\freeChart\\hamcrest-core-1.3.jar
-file.reference.hamcrest-core-1.3.jar-1=D:\\_Clood-Hemge\\21-Prog\\Java Final\\Libs\\freeChart\\hamcrest-core-1.3.jar
+file.reference.com.mysql.jdbc_5.1.5.jar=D:\\Prog\\Java Final\\Libs\\com.mysql.jdbc_5.1.5.jar
+file.reference.commons-codec-1.12.jar=D:\\Prog\\Java Final\\Libs\\poi\\commons-codec-1.12.jar
 file.reference.hamcrest-core-1.3.jar-2=dist\\lib\\hamcrest-core-1.3.jar
-file.reference.itextpdf-5.5.13.jar=D:\\_Dynag\\21-Prog\\Java Final\\Libs\\itextpdf-5.5.13.jar
-file.reference.itextpdf-5.5.13.jar-1=D:\\_Clood-Hemge\\21-Prog\\Java Final\\Libs\\itextpdf-5.5.13.jar
-file.reference.itextpdf-5.5.13.jar-2=dist\\lib\\itextpdf-5.5.13.jar
-file.reference.itextpdf-5.5.13.jar-3=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\itextpdf-5.5.13.jar
-file.reference.jcommon-1.0.23.jar=D:\\_Dynag\\21-Prog\\Java Final\\Libs\\freeChart\\jcommon-1.0.23.jar
+file.reference.ical4j-1.0.jar=D:\\Prog\\Java Final\\Libs\\ical4j-1.0.jar
+file.reference.itextpdf-5.5.13.jar=D:\\Prog\\Java Final\\Libs\\itextpdf-5.5.13.jar
+file.reference.jcalendar-1.4.jar=D:\\Prog\\Java Final\\Libs\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.23.jar-1=D:\\_Clood-Hemge\\21-Prog\\Java Final\\Libs\\freeChart\\jcommon-1.0.23.jar
-file.reference.jcommon-1.0.23.jar-2=dist\\lib\\jcommon-1.0.23.jar
-file.reference.jcommon-1.0.23.jar-3=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\freeChart\\jcommon-1.0.23.jar
-file.reference.jfreechart-1.0.19.jar=D:\\_Dynag\\21-Prog\\Java Final\\Libs\\freeChart\\jfreechart-1.0.19.jar
-file.reference.jfreechart-1.0.19.jar-1=D:\\_Clood-Hemge\\21-Prog\\Java Final\\Libs\\freeChart\\jfreechart-1.0.19.jar
-file.reference.jfreechart-1.0.19.jar-2=dist\\lib\\jfreechart-1.0.19.jar
-file.reference.jfreechart-1.0.19.jar-3=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\freeChart\\jfreechart-1.0.19.jar
-file.reference.mail-1.4.6-sources.jar=D:\\_Dynag\\21-Prog\\Java Final\\Libs\\mail-1.4.6-sources.jar
-file.reference.mail-1.4.6-sources.jar-1=D:\\_Clood-Hemge\\21-Prog\\Java Final\\Libs\\mail-1.4.6-sources.jar
+file.reference.jcommon-1.0.23.jar-2=D:\\Prog\\Java Final\\Libs\\freeChart\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar-2=D:\\Prog\\Java Final\\Libs\\freeChart\\jfreechart-1.0.19.jar
+file.reference.JPack.jar=D:\\Prog\\Java Final\\Libs\\JPack.jar
 file.reference.mail-1.4.6-sources.jar-2=dist\\lib\\mail-1.4.6-sources.jar
 file.reference.mail-1.4.6-sources.jar-3=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\mail-1.4.6-sources.jar
-file.reference.mail-1.4.6.jar=D:\\_Dynag\\21-Prog\\Java Final\\Libs\\mail-1.4.6.jar
-file.reference.mail-1.4.6.jar-1=D:\\_Clood-Hemge\\21-Prog\\Java Final\\Libs\\mail-1.4.6.jar
-file.reference.mail-1.4.6.jar-2=dist\\lib\\mail-1.4.6.jar
-file.reference.mail-1.4.6.jar-3=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\mail-1.4.6.jar
-file.reference.postgresql-42.2.5.jar=D:\\_Dynag\\21-Prog\\Java Final\\Libs\\postgresql-42.2.5.jar
+file.reference.mail-1.4.6.jar=D:\\Prog\\Java Final\\Libs\\mail-1.4.6.jar
 file.reference.postgresql-42.2.5.jar-1=D:\\_Clood-Hemge\\21-Prog\\Java Final\\Libs\\postgresql-42.2.5.jar
-file.reference.postgresql-42.2.5.jar-2=dist\\lib\\postgresql-42.2.5.jar
-file.reference.postgresql-42.2.5.jar-3=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\postgresql-42.2.5.jar
-file.reference.rs2xml.jar=D:\\_Dynag\\21-Prog\\Java Final\\Libs\\rs2xml.jar
-file.reference.rs2xml.jar-1=D:\\_Clood-Hemge\\21-Prog\\Java Final\\Libs\\rs2xml.jar
-file.reference.rs2xml.jar-2=dist\\lib\\rs2xml.jar
-file.reference.rs2xml.jar-3=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\rs2xml.jar
-file.reference.sqlite-jdbc-3.27.2.1.jar=D:\\_Dynag\\21-Prog\\Java Final\\Libs\\sqlite-jdbc-3.27.2.1.jar
-file.reference.sqlite-jdbc-3.27.2.1.jar-1=D:\\_Clood-Hemge\\21-Prog\\Java Final\\Libs\\sqlite-jdbc-3.27.2.1.jar
+file.reference.postgresql-42.2.5.jar-2=D:\\Prog\\Java Final\\Libs\\postgresql-42.2.5.jar
+file.reference.rs2xml.jar=D:\\Prog\\Java Final\\Libs\\rs2xml.jar
+file.reference.sqlite-jdbc-3.27.2.1.jar-1=D:\\Prog\\Java Final\\Libs\\sqlite-jdbc-3.27.2.1.jar
 file.reference.sqlite-jdbc-3.27.2.1.jar-2=dist\\lib\\sqlite-jdbc-3.27.2.1.jar
-file.reference.sqlite-jdbc-3.27.2.1.jar-3=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\sqlite-jdbc-3.27.2.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.com.lowagie.text-2.1.7.jar}:\
-    ${file.reference.itextpdf-5.5.13.jar}:\
-    ${file.reference.mail-1.4.6-sources.jar}:\
-    ${file.reference.mail-1.4.6.jar}:\
-    ${file.reference.postgresql-42.2.5.jar}:\
-    ${file.reference.rs2xml.jar}:\
-    ${file.reference.sqlite-jdbc-3.27.2.1.jar}:\
-    ${file.reference.hamcrest-core-1.3.jar}:\
-    ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}:\
-    ${file.reference.hamcrest-core-1.3.jar-1}:\
-    ${file.reference.jcommon-1.0.23.jar-1}:\
-    ${file.reference.jfreechart-1.0.19.jar-1}:\
-    ${file.reference.com.lowagie.text-2.1.7.jar-1}:\
-    ${file.reference.itextpdf-5.5.13.jar-1}:\
-    ${file.reference.mail-1.4.6-sources.jar-1}:\
-    ${file.reference.mail-1.4.6.jar-1}:\
-    ${file.reference.postgresql-42.2.5.jar-1}:\
-    ${file.reference.rs2xml.jar-1}:\
-    ${file.reference.sqlite-jdbc-3.27.2.1.jar-1}:\
+    ${file.reference.commons-codec-1.12.jar}:\
+    ${file.reference.JPack.jar}:\
+    ${file.reference.activation-1.1.jar}:\
     ${file.reference.com.lowagie.text-2.1.7.jar-2}:\
-    ${file.reference.hamcrest-core-1.3.jar-2}:\
-    ${file.reference.itextpdf-5.5.13.jar-2}:\
-    ${file.reference.jcommon-1.0.23.jar-2}:\
-    ${file.reference.jfreechart-1.0.19.jar-2}:\
-    ${file.reference.mail-1.4.6-sources.jar-2}:\
-    ${file.reference.mail-1.4.6.jar-2}:\
-    ${file.reference.postgresql-42.2.5.jar-2}:\
-    ${file.reference.rs2xml.jar-2}:\
-    ${file.reference.sqlite-jdbc-3.27.2.1.jar-2}:\
-    ${file.reference.com.lowagie.text-2.1.7.jar-3}:\
-    ${file.reference.commons-net-3.6-sources.jar}:\
-    ${file.reference.commons-net-3.6.jar}:\
-    ${file.reference.itextpdf-5.5.13.jar-3}:\
-    ${file.reference.mail-1.4.6-sources.jar-3}:\
-    ${file.reference.mail-1.4.6.jar-3}:\
-    ${file.reference.postgresql-42.2.5.jar-3}:\
-    ${file.reference.rs2xml.jar-3}:\
-    ${file.reference.jcommon-1.0.23.jar-3}:\
-    ${file.reference.jfreechart-1.0.19.jar-3}:\
-    ${file.reference.sqlite-jdbc-3.27.2.1.jar-3}:\
     ${file.reference.com.mysql.jdbc_5.1.5.jar}:\
-    ${file.reference.activation-1.1.jar}
+    ${file.reference.ical4j-1.0.jar}:\
+    ${file.reference.itextpdf-5.5.13.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mail-1.4.6.jar}:\
+    ${file.reference.postgresql-42.2.5.jar-2}:\
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.sqlite-jdbc-3.27.2.1.jar-1}:\
+    ${file.reference.jcommon-1.0.23.jar-2}:\
+    ${file.reference.jfreechart-1.0.19.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
