--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,9 +49,11 @@ file.reference.jcommon-1.0.23.jar-1=D:\\_Clood-Hemge\\21-Prog\\Java Final\\Libs\
 file.reference.jcommon-1.0.23.jar-2=D:\\Prog\\Java Final\\Libs\\freeChart\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar-2=D:\\Prog\\Java Final\\Libs\\freeChart\\jfreechart-1.0.19.jar
 file.reference.JPack.jar=D:\\Prog\\Java Final\\Libs\\JPack.jar
+file.reference.jpcap.jar=D:\\Prog\\Java Final\\Libs\\jpcap.jar
 file.reference.mail-1.4.6-sources.jar-2=dist\\lib\\mail-1.4.6-sources.jar
 file.reference.mail-1.4.6-sources.jar-3=D:\\_Clood\\SFTP\\21-Prog\\Java Final\\Libs\\mail-1.4.6-sources.jar
 file.reference.mail-1.4.6.jar=D:\\Prog\\Java Final\\Libs\\mail-1.4.6.jar
+file.reference.poi-4.1.0.jar=D:\\Prog\\Java Final\\Libs\\poi-4.1.0.jar
 file.reference.postgresql-42.2.5.jar-1=D:\\_Clood-Hemge\\21-Prog\\Java Final\\Libs\\postgresql-42.2.5.jar
 file.reference.postgresql-42.2.5.jar-2=D:\\Prog\\Java Final\\Libs\\postgresql-42.2.5.jar
 file.reference.rs2xml.jar=D:\\Prog\\Java Final\\Libs\\rs2xml.jar
@@ -73,7 +75,9 @@ javac.classpath=\
     ${file.reference.rs2xml.jar}:\
     ${file.reference.sqlite-jdbc-3.27.2.1.jar-1}:\
     ${file.reference.jcommon-1.0.23.jar-2}:\
-    ${file.reference.jfreechart-1.0.19.jar-2}
+    ${file.reference.jfreechart-1.0.19.jar-2}:\
+    ${file.reference.jpcap.jar}:\
+    ${file.reference.poi-4.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
